--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
+bokeh==2.4.3
 imgkit==1.2.2
 ipython==8.5.0
-kaleido==0.2.1
 matplotlib==3.5.2
 numpy==1.22.4
 pandas==1.4.2
@@ -8,5 +8,8 @@ Pillow==9.2.0
 plotly==5.8.2
 polyline==1.4.0
 PyYAML==6.0
-requests==2.27.1
+requests==2.28.1
 streamlit==1.12.2
+streamlit_option_menu==0.3.2
+supabase==0.7.1
+toml==0.10.2
